# cpp_cuda_template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  run.sh
include/: kernel.cuh
src/: CMakeLists.txt  kernel.cu  main.cpp
